Pull #18608: Add `CodeCleanup`